# valohai-yaml

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-lint.in  requirements-lint.txt  requirements-test.in  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
examples/: edge-merge-mode.yaml  endpoint-example.yaml  environment-variable-group-example.yaml  example1.yaml  example2.yaml  example3.yaml  flag-optional-example.yaml  flag-param-example.yaml  flag-param-pass-as-example.yaml  input-edge-merge-mode.yaml  input-extras.yaml  input-keep-directories.yaml  input-override-mode.yaml  keep-order.yaml  mount-example.yaml  multiple-param.yaml  optional-default-param.yaml  pipeline-deployment-edge-example.yaml  pipeline-edge-types-example.yaml  pipeline-example.yaml  pipeline-execution-retry-example.yaml  pipeline-override-example.yaml  pipeline-overriden-example.yaml  pipeline-with-automatic-deployment-creation.yaml  pipeline-with-different-commit.yaml  pipeline-with-override-only-preset.yaml  pipeline-with-parameters-example.yaml  pipeline-with-runtime-config-preset.yaml  pipeline-with-task-blueprint-example.yaml  pipeline-with-tasks-example.yaml  shebang-example.yaml  step-with-cache-volumes.yaml  step-with-partial-resources.yaml  step-with-preset.yaml  step-with-resources.yaml  step-with-tasks.yaml  task-example.yaml  timeouts-example.yaml
scripts/: convert_schema_yaml.py
tests/: config_data.py  conftest.py  consts.py  invalid.yaml  test_command.py  test_deployment.py  test_duration_parsing.py  test_edge.py  test_edge_merge_mode.py  test_endpoint_parsing.py  test_execution_node.py  test_generator.py  test_generator_parsing.py  test_get_step_by.py  test_input_edge_merge_mode.py  test_input_override_mode.py  test_linter.py  test_markdown_schema_doc.py  test_merge.py  test_merging.py  test_multiple_param.py  test_objs_reexports.py  test_order_retention.py  test_param_validation.py  test_parsing.py  test_pipeline.py  test_pipeline_conversion.py  test_pipeline_parameters.py  test_schemata.py  test_serialize_parameter.py  test_serialize_step.py  test_step_parsing.py  test_task.py  test_task_node_with_blueprint.py  test_utils.py  test_validation.py  test_workload_resources.py  test_yamlgen.py  test_yamlgen_parsing.py  utils.py
tests/__snapshots__/: test_validation.ambr
tests/error_examples/: endpoint-names-invalid.yaml  input-name-too-long.yaml  invalid-YAML-indentation.yaml  invalid-edge-parts.yaml  invalid-indentation-with-valid-YAML.yaml  invalid-on-error-value.yaml  invalid-shorthand-edge.yaml  invalid-task-blueprint-reference.yaml  invalid-upload-store-value.yaml  pipeline-override-example-invalid.yaml  pipeline-with-preset-override-without-environment.yaml  step-invalid-resources.yaml  step-missing-required-properties.yaml  step-preset-without-environment.yaml  step-stop-condition.yaml  step-with-error-tasks.yaml  step-with-missing-resources.yaml  task-stop-condition.yaml  wrong-edge-merge-mode.yaml  wrong-input-edge-merge-mode.yaml  wrong-input-override-mode.yaml
tests/generator_examples/parsing/: test2.py  test2.step.json  test3.parameters.json  test3.step.json
tests/generator_examples/yaml/: test2.expected.valohai.yaml  test4.py  (+2 more)
tests/valid_examples/: edge-merge-mode.yaml  endpoint-names-valid.yaml  input-edge-merge-mode.yaml  step-stop-condition.yaml  task-stop-condition.yaml
tests/warning_examples/: duplicate_step_names.yaml  ineffective-optional-on-flag.yaml  invalid-numeric-parameter-default.yaml  invalid-numeric-range-parameter-default.yaml  invalid-string-parameter-default.yaml  nonsensical-task-bits.yaml  override-with-extra-fields-warning.yaml  targetless-pipeline-params.yaml
valohai_yaml/: __init__.py  __main__.py  _compat.py  commands.py  excs.py  lint.py  parsing.py  schema_data.py  types.py  utils.py  validate.py  validation.py
valohai_yaml/generator/: consts.py  generator.py
valohai_yaml/objs/: __init__.py  base.py  config.py  deployment.py  endpoint.py  enums.py  environment_variable.py  file.py  input.py  merge_mode.py  mount.py  parameter.py  parameter_map.py  parameter_widget.py  step.py  task.py  utils.py  variant_parameter.py  workflow_resources.py  workload_resources.py
valohai_yaml/pipelines/: conversion.py  override.py
valohai_yaml/schema/: base.json  base.yaml  deployment-node.yaml  endpoint.yaml  environment-variable-item.yaml  execution-node.yaml  file-item.yaml  input-item.json  input-item.yaml  mount-item.yaml  node-action.yaml  node-edge-merge-mode.yaml  output-item.yaml  overridden-properties.yaml  param-item.json  param-item.yaml  pipeline-param.yaml  pipeline.yaml  rule-item.yaml  step.json  step.yaml  task-node.yaml  task.yaml  toleration.yaml  variant-param-rule-item.yaml  variant-param.yaml  workflow-resource-cpu.yaml  workflow-resource-devices.yaml  workflow-resource-memory.yaml
valohai_yaml/utils/: __init__.py  duration.py  expression_lint.py  lint.py  merge.py  node_socket_utils.py  terminal.py  version.py
valohai_yaml/yamlgen/: parser.py  yamlgen.py
(+28 files in other folders)
