[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valohai-yaml"
dynamic = ["version"]
description = "Valohai.yaml validation and parsing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Valohai", email = "info@valohai.com" },
]
keywords = [
    "strings",
    "utility",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "jsonschema>=4.0",
    "PyYAML",
    "leval>=1.1.1",
]

[project.scripts]
valohai-yaml = "valohai_yaml.__main__:main"

[project.urls]
Homepage = "https://github.com/valohai/valohai-yaml"

[tool.hatch.version]
path = "valohai_yaml/__init__.py"

[tool.pytest]
norecursedirs = [".git", ".tox", "dist"]

[tool.ruff]
target-version = "py38"
line-length = 120
mccabe.max-complexity = 10
flake8-tidy-imports.ban-relative-imports = "all"
select = [
    "ANN", # annotations
    "B", # bugbear
    "C", # complexity & comprehensions
    "COM", # trailing commas
    "D", # docstrings
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "RET", # return
    "SIM", # simplify
    "T", # debugger and print
    "TID", # tidy imports
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D100", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "RET504", # Unnecessary variable assignment before `return` statement
    "SIM105", # Use `contextlib.suppress(TypeError)` instead of try-except-pass
]

[tool.ruff.per-file-ignores]
"valohai_yaml/__main__.py" = ["T2"] # the print()s are fine in here
"**/tests/**" = [
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
]

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true
