[metadata]
name = valohai-yaml
description = Valohai.yaml validation and parsing
version = attr:valohai_yaml.__version__
url = https://github.com/valohai/valohai-yaml
author = Valohai
author_email = info@valohai.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries

[options]
install_requires =
    jsonschema
    PyYAML
packages = find:
include_package_data = True
python_requires = >=3.6

[options.entry_points]
console_scripts =
    valohai-yaml = valohai_yaml.__main__:main

[options.packages.find]
include =
    valohai_yaml*

[flake8]
max-line-length = 120
max-complexity = 10
ignore = D100,D102,D103,D104,D107,SIM105,ANN101,ANN102,ANN401
per-file-ignores =
    tests/*: ANN001,ANN201,ANN202,R504,W503
ban-relative-imports = all

[pydocstyle]
ignore = D100,D104,D203,D212

[tool:pytest]
norecursedirs = .git .tox

[isort]
profile = black
multi_line_output = 3
